theme.css
/* ... */
/**
 * 3.0 - Typography
 */

@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900);
h1, h2, h3, h4, h5, h6 {
	font-family: 'Roboto', Helvetica, Arial, sans-serif; 
	font-weight: bold; 
	text-transform: uppercase;
	line-height: 1;
}
h1 {font-size: 2.69rem;}
h2 {font-size: 1.44rem;}
h3 {font-size: 1.25rem;}
h4 {font-size: 1.13rem;}
h5 {font-size: 0.81rem;}
h6 {font-size: 0.63rem;}


/**
 * 4.0 - Elements
 */


/**
 * 5.0 - Forms
 */


/**
 * 6.0 - Navigation
 */

	/**
	 * 6.1 - Links
	 */


	/**
	 * 6.2 - Menus
	 */

	/*top bar & auxiliary*/
	#main-nav {
		background-color: #f7f7f7;
		position: fixed;
		z-index: 4;
		width: 100%;
		box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
	}
	#main-nav .name a {
		font-size: 1.19rem !important;
		font-family: 'Arial',sans-serif !important;
	}
	#auxiliary { 
		background-color: #f7f7f7;
		border-bottom: 1px solid #f7f7f7;
	}
	#main-nav li:not(.has-form) a:not(.button),
	#main-nav li.active:not(.has-form) a:not(.button),
	#aux-main li:not(.has-form) a:not(.button),
	#aux-main li.active:not(.has-form) a:not(.button) {
		font-size: 0.85rem;
		color: #000;
		font-family: "Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
		padding: 0px 15px;
		line-height: 58px;
	}
	.top-bar-left > ul > li,
	.top-bar-right > ul > li,
	#aux-main > ul > li {
		border-right: 1px solid #EBEBEB;
	}
	#main-nav .has-dropdown > a,
	#aux-main .has-dropdown > a {
		padding-right: 35px !important;
	}
	#main-nav li.current-menu-item:not(.has-form)
	#aux-main li.current-menu-item:not(.has-form) {
		background: #E4E4E4 none repeat scroll 0% 0%;
		line-height: 1;
	}
	#main-nav .has-dropdown > a::after,
	#aux-main .has-dropdown > a::after {
		border-color: rgba(0, 0, 0, 0.4) transparent transparent transparent;
		margin-right: 15px;
		top: 50%;
		right: 0;
	}
	#main-nav ul .name a:hover {
		background: #f7f7f7 !important;
	}
	#main-nav ul li:hover:not(.has-form) > a,
	#main-nav .dropdown li:not(.has-form) a:not(.button):hover,
	#main-nav .dropdown li:not(.has-form):hover > a:not(.button),
	/*#main-nav .vertical li:not(.has-form):hover > a:not(.button),*/
	#aux-main ul li:hover:not(.has-form) > a,
	#aux-main .dropdown li:not(.has-form) a:not(.button):hover,
	#aux-main .dropdown li:not(.has-form):hover > a:not(.button) {
		background: #e4e4e4;
	}
	#main-nav li.current-menu-item:not(.has-form) a:not(.button),
	#aux-main li.current-menu-item:not(.has-form) a:not(.button),
	#offCanvasRight li.current-menu-item:not(.has-form) > a:not(.button) {
		background-color: #e4e4e4;
	}
	#main-nav .vertical li a::after,
	#aux-main .vertical li a::after {
		border-color: transparent transparent transparent rgba(0, 0, 0, 0.4);
	}
	#main-nav .vertical > li > a,
	#aux-main .vertical > li > a {
		line-height: 40px !important;
	}
	#main-nav .vertical > li > .is-dropdown-submenu,
	#aux-main .vertical > li > .is-dropdown-submenu {
		top: 1px;
	}

	/*off-canvass*/
	#off-canvas-container {
		z-index: 4;
		box-shadow: -3px 0px 4px rgba(0, 0, 0, 0.2);
	}
	.title-bar {
		background: #f7f7f7;
	}

	.title-bar-right .name a,
	.title-bar-left .name a,
	.title-bar-title {
		color: #000;
		font-size: 1rem;
		font-family: 'Roboto Condensed', sans-serif;
	}
	.title-bar-right button::after {
		background: #000;
		box-shadow: 0 7px 0 #000,0 14px 0 #000;
	}

	/*off-canvass right menu*/
	#offCanvasRight {
		background-color: #fefefe;
		font-family: 'Roboto Condensed', sans-serif;
		height: 100%;
	}
	#offCanvasRight .is-drilldown {
		max-width: 250px !important;
		height: 95%;
	}
	#offCanvasRight .list-item {
		background-color: #f7f7f7;
		padding: 0.7rem 1rem;
	}
	#offCanvasRight .list-item:first-child {
		/*border-bottom: 1px solid #e9e9e9;*/
	}
	#offCanvasRight .is-submenu-parent-item {
		font-weight: bold;
		border-bottom: 1px solid #ccc;
	}
	#offCanvasRight .vertical li:last-child {
		border-bottom: 1px solid #e9e9e9;
	}
	#offCanvasRight li a {
		background-color: #f7f7f7;
		color: #000;
		font-size: 18px;
		line-height: 1.5
	}
	#offCanvasRight li .is-drilldown-submenu a {
		font-size: 15px;
		/*font-weight: 600;*/
	}
	/*#offCanvasRight li ul ul a {
		font-size: 13px;
		font-weight: 600;
	}*/
	#offCanvasRight .menu-item-has-children a::after {
		border-color: transparent transparent transparent #898989 ;
	}
	/*.js-drilldown-back { text-transform: uppercase; }*/
	.js-drilldown-back > a::before {
		/*display: none;*/
		margin-bottom: 0.2rem;
		border-color: transparent #898989 transparent transparent;
	}
	#aux-offmenu { 
		border-top: 1px solid #e9e9e9; 
		font-weight: 600; 
		color: #c7c7c7;
	}


/**
 * 7.0 - Accessibility
 */

#accessibility-shortcuts { }
#accessibility-shortcuts ul { margin: 0; overflow: hidden; height: auto; width: auto; }
#accessibility-shortcuts ul li { margin: 0; padding: 0; list-style: none; }
#accessibility-shortcuts ul li a { font-size: 0; display: block; padding: 0 20px; }
#accessibility-shortcuts ul li.access-focus a { font-size: inherit; }
#a11y-modal { padding-top: 58px; }
#accessibility-button { background-color: #f7f7f7; }
.fa-universal-access { color: #000; }


/**
 * 8.0 - Alignments
 */


/**
 * 9.0 - Clearings
 */


/**
 * 10.0 - Widgets
 */

.top-bar-right .search {
	padding: 0 20px;
	width: 195px;
}
#offCanvasRight input[type="search"],
.top-bar-right input[type="search"] {
	height: 2.3125rem;
	border-radius: 0;
	font-size: 0.875rem;
	margin-bottom: 0px;
}
#pst-container {
	color: #000;
	font-family: "Roboto",sans-serif;
	font-size: 0.8rem;
	line-height: 1.2;
	text-align: right;
}
#back-to-top {
	position: fixed;
	bottom: 2em;
	right: 0px;
	text-decoration: none;
	color: #ffffff;
	background-color: #111111;
	border-top-left-radius: 5px;
	border-bottom-left-radius: 5px;
	font-size: .75rem;
	padding: 1em;
	display: none;
	opacity: .6;
	/*transition: opacity .5s ease-in;
	-moz-transition: opacity .5s ease-in;
	-webkit-transition: opacity .5s ease-in;
	-o-transition: opacity .5s ease-in;*/
}
/* ... */

